@@ -1,15 +1,20 @@
 package com.asg.shipping.linetariffs.service;
 
+import com.asg.common.lib.dto.DeleteReasonDto;
 import com.asg.common.lib.dto.FilterDto;
 import com.asg.common.lib.dto.RawSearchResult;
+import com.asg.common.lib.enums.LogDetailsEnum;
 import com.asg.common.lib.exception.ValidationException;
+import com.asg.common.lib.security.util.UserContext;
+import com.asg.common.lib.service.DocumentDeleteService;
 import com.asg.common.lib.service.DocumentSearchService;
+import com.asg.common.lib.service.LoggingService;
 import com.asg.common.lib.utility.PaginationUtil;
-import com.asg.common.lib.dto.LovGetListDto;
-import com.asg.common.lib.service.LovDataService;
 import com.asg.shipping.exceptions.ResourceNotFoundException;
 import com.asg.shipping.linetariffs.dto.*;
 import com.asg.shipping.linetariffs.entity.*;
+import com.asg.shipping.containertypes.entity.ShipContainerTypeMaster;
+import com.asg.shipping.containertypes.repository.ShipContainerTypeMasterRepository;
 import com.asg.shipping.linetariffs.repository.*;
 import com.asg.shipping.linetariffs.util.LineTariffMapper;
 import lombok.RequiredArgsConstructor;
@@ -26,6 +31,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import static com.asg.common.lib.utility.ASGHelperUtils.getCurrentUser;
 
@@ -37,46 +43,48 @@ import static com.asg.common.lib.utility.ASGHelperUtils.getCurrentUser;
 @Slf4j
 public class LineTariffsServiceImpl implements LineTariffsService {
 
+    private static final String LINE_TARIFF = "Line Tariff";
+    private static final String TRANSACTION_POID = "transactionPoid";
+    private static final String TRANSACTION_POID_COL = "TRANSACTION_POID";
+    private static final String TARIFF_DETAIL = "Tariff Detail";
+    private static final String DET_ROW_ID = "detRowId";
+
     private final ShipLineTariffHdrRepository tariffHdrRepository;
     private final ShipLineTariffImpDtlRepository impDtlRepository;
     private final ShipLineTariffImpPayDtlRepository impPayDtlRepository;
     private final ShipLineTariffExpDtlRepository expDtlRepository;
     private final ShipLineTariffExpPayDtlRepository expPayDtlRepository;
     private final DocumentSearchService documentService;
-    private final LovDataService lovService;
     private final LineTariffMapper mapper;
+    private final LoggingService loggingService;
+    private final DocumentDeleteService documentDeleteService;
+    private final ShipContainerTypeMasterRepository containerTypeRepository;
 
     @Override
     @Transactional(readOnly = true)
-    public Map<String, Object> searchLineTariffs(String docId, com.asg.common.lib.dto.FilterRequestDto request, Pageable pageable) {
-        log.info("Searching line tariffs with docId: {}, page: {}, size: {}", docId, pageable.getPageNumber(), pageable.getPageSize());
+    public Map<String, Object> searchLineTariffs(String docId, com.asg.common.lib.dto.FilterRequestDto request, Pageable pageable, LocalDate startDate, LocalDate endDate) {
+        log.info("Searching line tariffs with docId: {}, page: {}, size: {}, startDate: {}, endDate: {}", docId, pageable.getPageNumber(), pageable.getPageSize(), startDate, endDate);
 
-        // Resolve filter components from FilterRequestDto
         String operator = documentService.resolveOperator(request);
         String isDeleted = documentService.resolveIsDeleted(request);
         List<FilterDto> filters = documentService.resolveFilters(request);
 
-        // Call documentService.search with docId, filters, operator, pageable, isDeleted
-        // Label field: "DESCRIPTION" (display field)
-        // Value field: "TRANSACTION_POID" (primary key)
         RawSearchResult raw = documentService.search(
                 docId,
                 filters,
                 operator,
                 pageable,
                 isDeleted,
-                "DESCRIPTION",        // label field for display
-                "TRANSACTION_POID"   // value field (primary key)
+                "DESCRIPTION",
+                TRANSACTION_POID_COL
         );
 
-        // Convert RawSearchResult to Page
         Page<Map<String, Object>> page = new PageImpl<>(
                 raw.records(),
                 pageable,
                 raw.totalRecords()
         );
 
-        // Wrap with pagination and display fields
         return PaginationUtil.wrapPage(page, raw.displayFields());
     }
 
@@ -88,7 +96,7 @@ public class LineTariffsServiceImpl implements LineTariffsService {
         Long groupPoid = com.asg.common.lib.security.util.UserContext.getGroupPoid();
 
         ShipLineTariffHdr tariff = tariffHdrRepository.findByTransactionPoidAndGroupPoid(id, groupPoid)
-                .orElseThrow(() -> new ResourceNotFoundException("Line Tariff", "transactionPoid", id.toString()));
+                .orElseThrow(() -> new ResourceNotFoundException(LINE_TARIFF, TRANSACTION_POID, id.toString()));
 
         // Fetch all detail records
         List<ShipLineTariffImpDtl> impDtlList = impDtlRepository.findByTransactionPoidOrderByDetRowId(id);
@@ -96,10 +104,9 @@ public class LineTariffsServiceImpl implements LineTariffsService {
         List<ShipLineTariffExpDtl> expDtlList = expDtlRepository.findByTransactionPoidOrderByDetRowId(id);
         List<ShipLineTariffExpPayDtl> expPayDtlList = expPayDtlRepository.findByTransactionPoidOrderByDetRowId(id);
 
-        LineTariffDto dto = mapper.mapToDto(tariff, impDtlList, impPayDtlList, expDtlList, expPayDtlList);
+        LineTariffDto dto = mapper.mapToDto(tariff, impDtlList, impPayDtlList, expDtlList, expPayDtlList, buildContainerTypeMap(impDtlList, impPayDtlList, expDtlList, expPayDtlList));
 
-        // Enrich with LOV data - TEMPORARILY DISABLED FOR PERFORMANCE
-        // enrichLovData(dto);
+        loggingService.createLogSummaryEntry(LogDetailsEnum.VIEWED, UserContext.getDocumentId(), id.toString());
 
         log.info("Successfully retrieved line tariff with id: {}", id);
         return dto;
@@ -115,10 +122,29 @@ public class LineTariffsServiceImpl implements LineTariffsService {
 
         // Create header entity
         ShipLineTariffHdr tariff = new ShipLineTariffHdr();
-        mapper.mapCreateDTOToEntity(dto, tariff, groupPoid, userPoid);
+        mapper.mapCreateDTOToEntity(dto, tariff, groupPoid);
+
+        // Additional validation just before save to prevent race conditions
+        if (dto.getDocRef() != null && !dto.getDocRef().trim().isEmpty() && tariffHdrRepository.existsByDocRef(dto.getDocRef().trim())) {
+            throw new ValidationException("Document Reference " + dto.getDocRef().trim() + " already exists. Please use a different reference.");
+        }
 
         // Save header (generates TRANSACTION_POID)
-        ShipLineTariffHdr saved = tariffHdrRepository.save(tariff);
+        ShipLineTariffHdr saved;
+        try {
+            saved = tariffHdrRepository.save(tariff);
+            tariffHdrRepository.flush(); // Force flush to catch constraint violations immediately
+        } catch (org.springframework.dao.DataIntegrityViolationException e) {
+            if (e.getMessage().contains("UK_DOCREFFSHIP_LINE_TARIFF_HDR")) {
+                throw new ValidationException("Document Reference " + dto.getDocRef() + " already exists. Please use a different reference.");
+            }
+            if (e.getMessage().contains("SHIP_TF_HDR_LINPERION_UK")) {
+                throw new ValidationException("A tariff with the same line and period already exists. Please use a different period.");
+            }
+            throw e;
+        }
+
+        loggingService.createLogSummaryEntry(LogDetailsEnum.CREATED, UserContext.getDocumentId(), saved.getTransactionPoid().toString());
 
         // Create detail records
         createDetailRecords(saved.getTransactionPoid(), dto);
@@ -129,9 +155,7 @@ public class LineTariffsServiceImpl implements LineTariffsService {
         List<ShipLineTariffExpDtl> expDtlList = expDtlRepository.findByTransactionPoidOrderByDetRowId(saved.getTransactionPoid());
         List<ShipLineTariffExpPayDtl> expPayDtlList = expPayDtlRepository.findByTransactionPoidOrderByDetRowId(saved.getTransactionPoid());
 
-        LineTariffDto result = mapper.mapToDto(saved, impDtlList, impPayDtlList, expDtlList, expPayDtlList);
-        // enrichLovData(result); // TEMPORARILY DISABLED FOR PERFORMANCE
-
+        LineTariffDto result = mapper.mapToDto(saved, impDtlList, impPayDtlList, expDtlList, expPayDtlList, buildContainerTypeMap(impDtlList, impPayDtlList, expDtlList, expPayDtlList));
         log.info("Successfully created line tariff with id: {}", saved.getTransactionPoid());
         return result;
     }
@@ -143,14 +167,39 @@ public class LineTariffsServiceImpl implements LineTariffsService {
 
         // Find existing tariff
         ShipLineTariffHdr tariff = tariffHdrRepository.findByTransactionPoidAndGroupPoid(id, groupPoid)
-                .orElseThrow(() -> new ResourceNotFoundException("Line Tariff", "transactionPoid", id.toString()));
+                .orElseThrow(() -> new ResourceNotFoundException(LINE_TARIFF, TRANSACTION_POID, id.toString()));
 
         // Validate
         validateTariffUpdateDTO(dto, id, groupPoid);
 
+        // Create old entity for logging changes
+        ShipLineTariffHdr oldTariff = new ShipLineTariffHdr();
+        oldTariff.setDescription(tariff.getDescription());
+        oldTariff.setPeriodFrom(tariff.getPeriodFrom());
+        oldTariff.setPeriodTo(tariff.getPeriodTo());
+        oldTariff.setDmgFromSameday(tariff.getDmgFromSameday());
+        oldTariff.setDmgFromNextday(tariff.getDmgFromNextday());
+        oldTariff.setPayableCurrency(tariff.getPayableCurrency());
+        oldTariff.setReceivableCurrency(tariff.getReceivableCurrency());
+        oldTariff.setDocRef(tariff.getDocRef());
+
         // Update header entity
-        mapper.mapUpdateDTOToEntity(dto, tariff, groupPoid, userPoid);
-        ShipLineTariffHdr saved = tariffHdrRepository.save(tariff);
+        mapper.mapUpdateDTOToEntity(dto, tariff);
+        ShipLineTariffHdr saved;
+        try {
+            saved = tariffHdrRepository.save(tariff);
+            tariffHdrRepository.flush(); // Force flush to catch constraint violations immediately
+        } catch (org.springframework.dao.DataIntegrityViolationException e) {
+            if (e.getMessage().contains("UK_DOCREFFSHIP_LINE_TARIFF_HDR")) {
+                throw new ValidationException("Document Reference " + dto.getDocRef() + " already exists. Please use a different reference.");
+            }
+            if (e.getMessage().contains("SHIP_TF_HDR_LINPERION_UK")) {
+                throw new ValidationException("A tariff with the same line and period already exists. Please use a different period.");
+            }
+            throw e;
+        }
+
+        loggingService.logChanges(oldTariff, saved, ShipLineTariffHdr.class, UserContext.getDocumentId(), id.toString(), LogDetailsEnum.MODIFIED, TRANSACTION_POID_COL);
 
         // Update detail records
         updateDetailRecords(id, dto);
@@ -161,35 +210,28 @@ public class LineTariffsServiceImpl implements LineTariffsService {
         List<ShipLineTariffExpDtl> expDtlList = expDtlRepository.findByTransactionPoidOrderByDetRowId(id);
         List<ShipLineTariffExpPayDtl> expPayDtlList = expPayDtlRepository.findByTransactionPoidOrderByDetRowId(id);
 
-        LineTariffDto result = mapper.mapToDto(saved, impDtlList, impPayDtlList, expDtlList, expPayDtlList);
-        // enrichLovData(result); // TEMPORARILY DISABLED FOR PERFORMANCE
-
+        LineTariffDto result = mapper.mapToDto(saved, impDtlList, impPayDtlList, expDtlList, expPayDtlList, buildContainerTypeMap(impDtlList, impPayDtlList, expDtlList, expPayDtlList));
         log.info("Successfully updated line tariff with id: {}", id);
         return result;
     }
 
     @Override
     @Transactional
-    public void deleteLineTariff(Long id) {
+    public void deleteLineTariff(Long id, DeleteReasonDto deleteReasonDto) {
         log.info("Deleting line tariff with id: {}", id);
 
-        Long groupPoid = com.asg.common.lib.security.util.UserContext.getGroupPoid();
+        Long groupPoid = UserContext.getGroupPoid();
 
-        ShipLineTariffHdr tariff = tariffHdrRepository.findByTransactionPoidAndGroupPoid(id, groupPoid)
-                .orElseThrow(() -> new ResourceNotFoundException("Line Tariff", "transactionPoid", id.toString()));
+        tariffHdrRepository.findByTransactionPoidAndGroupPoid(id, groupPoid)
+                .orElseThrow(() -> new ResourceNotFoundException(LINE_TARIFF, TRANSACTION_POID, id.toString()));
 
-        // Check if already deleted (idempotent)
-        if ("Y".equals(tariff.getDeleted())) {
-            log.info("Line tariff with id: {} is already deleted", id);
-            return;
-        }
-
-        // Soft delete
-        tariff.setDeleted("Y");
-        tariff.setLastModifiedBy(getCurrentUser());
-        tariff.setLastModifiedDate(LocalDateTime.now());
-
-        tariffHdrRepository.save(tariff);
+        documentDeleteService.deleteDocument(
+                id,
+                "SHIP_LINE_TARIFF_HDR",
+                TRANSACTION_POID_COL,
+                deleteReasonDto,
+                null
+        );
 
         log.info("Successfully deleted line tariff with id: {}", id);
     }
@@ -201,7 +243,12 @@ public class LineTariffsServiceImpl implements LineTariffsService {
 
         // Find source tariff
         ShipLineTariffHdr sourceTariff = tariffHdrRepository.findByTransactionPoidAndGroupPoid(id, groupPoid)
-                .orElseThrow(() -> new ResourceNotFoundException("Line Tariff", "transactionPoid", id.toString()));
+                .orElseThrow(() -> new ResourceNotFoundException(LINE_TARIFF, TRANSACTION_POID, id.toString()));
+
+        // Validate period dates first
+        if (request.getPeriodFrom().isAfter(request.getPeriodTo())) {
+            throw new ValidationException("Period from date must be less than or equal to period to date");
+        }
 
         // Validate new period does not overlap
         Long companyPoid = com.asg.common.lib.security.util.UserContext.getCompanyPoid();
@@ -215,13 +262,11 @@ public class LineTariffsServiceImpl implements LineTariffsService {
             throw new ValidationException("New period overlaps with an existing tariff for the same line");
         }
 
-        // Validate period dates
-        if (request.getPeriodFrom().isAfter(request.getPeriodTo())) {
-            throw new ValidationException("Period from date must be less than or equal to period to date");
-        }
-
         // Update source tariff PERIOD_TO to new PERIOD_FROM - 1 day
         LocalDate newPeriodTo = request.getPeriodFrom().minusDays(1);
+        if (!newPeriodTo.isAfter(sourceTariff.getPeriodFrom()) && !newPeriodTo.isEqual(sourceTariff.getPeriodFrom())) {
+            throw new ValidationException("New period from date would invalidate the source tariff period");
+        }
         sourceTariff.setPeriodTo(newPeriodTo);
         sourceTariff.setLastModifiedBy(getCurrentUser());
         sourceTariff.setLastModifiedDate(LocalDateTime.now());
@@ -257,6 +302,8 @@ public class LineTariffsServiceImpl implements LineTariffsService {
 
         ShipLineTariffHdr savedNewTariff = tariffHdrRepository.save(newTariff);
 
+        loggingService.createLogSummaryEntry(LogDetailsEnum.CREATED, UserContext.getDocumentId(), savedNewTariff.getTransactionPoid().toString());
+
         // Copy all detail records
         copyDetailRecords(id, savedNewTariff.getTransactionPoid());
 
@@ -266,9 +313,7 @@ public class LineTariffsServiceImpl implements LineTariffsService {
         List<ShipLineTariffExpDtl> expDtlList = expDtlRepository.findByTransactionPoidOrderByDetRowId(savedNewTariff.getTransactionPoid());
         List<ShipLineTariffExpPayDtl> expPayDtlList = expPayDtlRepository.findByTransactionPoidOrderByDetRowId(savedNewTariff.getTransactionPoid());
 
-        LineTariffDto result = mapper.mapToDto(savedNewTariff, impDtlList, impPayDtlList, expDtlList, expPayDtlList);
-        // enrichLovData(result); // TEMPORARILY DISABLED FOR PERFORMANCE
-
+        LineTariffDto result = mapper.mapToDto(savedNewTariff, impDtlList, impPayDtlList, expDtlList, expPayDtlList, buildContainerTypeMap(impDtlList, impPayDtlList, expDtlList, expPayDtlList));
         log.info("Successfully copied line tariff with id: {} to new tariff with id: {}", id, savedNewTariff.getTransactionPoid());
         return result;
     }
@@ -277,14 +322,13 @@ public class LineTariffsServiceImpl implements LineTariffsService {
      * Create detail records for all four detail tables
      */
     private void createDetailRecords(Long transactionPoid, LineTariffCreateDTO dto) {
-        String currentUser = getCurrentUser();
-
         // Import Demurrage Collectable
         if (dto.getImportDemurrageCollectable() != null) {
             Long maxDetRowId = impDtlRepository.getMaxDetRowId(transactionPoid);
             for (TariffDetailCreateDTO detailDto : dto.getImportDemurrageCollectable()) {
+                validateContainerTypeExists(detailDto.getContainerTypePoid());
                 maxDetRowId++;
-                ShipLineTariffImpDtl detail = mapper.mapImpDtlCreateDTOToEntity(detailDto, transactionPoid, maxDetRowId, currentUser);
+                ShipLineTariffImpDtl detail = mapper.mapImpDtlCreateDTOToEntity(detailDto, transactionPoid, maxDetRowId);
                 impDtlRepository.save(detail);
             }
         }
@@ -293,8 +337,9 @@ public class LineTariffsServiceImpl implements LineTariffsService {
         if (dto.getImportDemurragePayable() != null) {
             Long maxDetRowId = impPayDtlRepository.getMaxDetRowId(transactionPoid);
             for (TariffDetailCreateDTO detailDto : dto.getImportDemurragePayable()) {
+                validateContainerTypeExists(detailDto.getContainerTypePoid());
                 maxDetRowId++;
-                ShipLineTariffImpPayDtl detail = mapper.mapImpPayDtlCreateDTOToEntity(detailDto, transactionPoid, maxDetRowId, currentUser);
+                ShipLineTariffImpPayDtl detail = mapper.mapImpPayDtlCreateDTOToEntity(detailDto, transactionPoid, maxDetRowId);
                 impPayDtlRepository.save(detail);
             }
         }
@@ -303,8 +348,9 @@ public class LineTariffsServiceImpl implements LineTariffsService {
         if (dto.getExportDetentionCollectable() != null) {
             Long maxDetRowId = expDtlRepository.getMaxDetRowId(transactionPoid);
             for (TariffDetailCreateDTO detailDto : dto.getExportDetentionCollectable()) {
+                validateContainerTypeExists(detailDto.getContainerTypePoid());
                 maxDetRowId++;
-                ShipLineTariffExpDtl detail = mapper.mapExpDtlCreateDTOToEntity(detailDto, transactionPoid, maxDetRowId, currentUser);
+                ShipLineTariffExpDtl detail = mapper.mapExpDtlCreateDTOToEntity(detailDto, transactionPoid, maxDetRowId);
                 expDtlRepository.save(detail);
             }
         }
@@ -313,8 +359,9 @@ public class LineTariffsServiceImpl implements LineTariffsService {
         if (dto.getExportDetentionPayable() != null) {
             Long maxDetRowId = expPayDtlRepository.getMaxDetRowId(transactionPoid);
             for (TariffDetailCreateDTO detailDto : dto.getExportDetentionPayable()) {
+                validateContainerTypeExists(detailDto.getContainerTypePoid());
                 maxDetRowId++;
-                ShipLineTariffExpPayDtl detail = mapper.mapExpPayDtlCreateDTOToEntity(detailDto, transactionPoid, maxDetRowId, currentUser);
+                ShipLineTariffExpPayDtl detail = mapper.mapExpPayDtlCreateDTOToEntity(detailDto, transactionPoid, maxDetRowId);
                 expPayDtlRepository.save(detail);
             }
         }
@@ -324,25 +371,23 @@ public class LineTariffsServiceImpl implements LineTariffsService {
      * Update detail records for all four detail tables
      */
     private void updateDetailRecords(Long transactionPoid, LineTariffUpdateDTO dto) {
-        String currentUser = getCurrentUser();
-
         // Update Import Demurrage Collectable
-        updateDetailRecordsImpDtl(transactionPoid, dto.getImportDemurrageCollectable(), currentUser);
+        updateDetailRecordsImpDtl(transactionPoid, dto.getImportDemurrageCollectable());
 
         // Update Import Demurrage Payable
-        updateDetailRecordsImpPayDtl(transactionPoid, dto.getImportDemurragePayable(), currentUser);
+        updateDetailRecordsImpPayDtl(transactionPoid, dto.getImportDemurragePayable());
 
         // Update Export Detention Collectable
-        updateDetailRecordsExpDtl(transactionPoid, dto.getExportDetentionCollectable(), currentUser);
+        updateDetailRecordsExpDtl(transactionPoid, dto.getExportDetentionCollectable());
 
         // Update Export Detention Payable
-        updateDetailRecordsExpPayDtl(transactionPoid, dto.getExportDetentionPayable(), currentUser);
+        updateDetailRecordsExpPayDtl(transactionPoid, dto.getExportDetentionPayable());
     }
 
     /**
      * Update Import Demurrage Collectable detail records
      */
-    private void updateDetailRecordsImpDtl(Long transactionPoid, List<TariffDetailUpdateDTO> detailDtos, String currentUser) {
+    private void updateDetailRecordsImpDtl(Long transactionPoid, List<TariffDetailUpdateDTO> detailDtos) {
         if (detailDtos == null) {
             detailDtos = java.util.Collections.emptyList();
         }
@@ -360,7 +405,7 @@ public class LineTariffsServiceImpl implements LineTariffsService {
         // Delete details not in request
         List<Long> toDelete = existingDetRowIds.stream()
                 .filter(id -> !requestDetRowIds.contains(id))
-                .collect(Collectors.toList());
+                .toList();
         for (Long detRowId : toDelete) {
             impDtlRepository.deleteById(new ShipLineTariffImpDtlId(transactionPoid, detRowId));
         }
@@ -368,17 +413,15 @@ public class LineTariffsServiceImpl implements LineTariffsService {
         // Update or create details
         Long maxDetRowId = impDtlRepository.getMaxDetRowId(transactionPoid);
         for (TariffDetailUpdateDTO detailDto : detailDtos) {
+            validateContainerTypeExists(detailDto.getContainerTypePoid());
             if (detailDto.getDetRowId() != null) {
-                // Update existing
                 ShipLineTariffImpDtl existing = impDtlRepository.findByTransactionPoidAndDetRowId(transactionPoid, detailDto.getDetRowId())
-                        .orElseThrow(() -> new ResourceNotFoundException("Tariff Detail", "detRowId", detailDto.getDetRowId().toString()));
-
-                mapper.updateImpDtlFromDTO(detailDto, existing, currentUser);
+                        .orElseThrow(() -> new ResourceNotFoundException(TARIFF_DETAIL, DET_ROW_ID, detailDto.getDetRowId().toString()));
+                mapper.updateImpDtlFromDTO(detailDto, existing);
                 impDtlRepository.save(existing);
             } else {
-                // Create new
                 maxDetRowId++;
-                ShipLineTariffImpDtl newDetail = mapper.mapImpDtlUpdateDTOToEntity(detailDto, transactionPoid, maxDetRowId, currentUser);
+                ShipLineTariffImpDtl newDetail = mapper.mapImpDtlUpdateDTOToEntity(detailDto, transactionPoid, maxDetRowId);
                 impDtlRepository.save(newDetail);
             }
         }
@@ -387,7 +430,7 @@ public class LineTariffsServiceImpl implements LineTariffsService {
     /**
      * Update Import Demurrage Payable detail records
      */
-    private void updateDetailRecordsImpPayDtl(Long transactionPoid, List<TariffDetailUpdateDTO> detailDtos, String currentUser) {
+    private void updateDetailRecordsImpPayDtl(Long transactionPoid, List<TariffDetailUpdateDTO> detailDtos) {
         if (detailDtos == null) {
             detailDtos = java.util.Collections.emptyList();
         }
@@ -405,7 +448,7 @@ public class LineTariffsServiceImpl implements LineTariffsService {
         // Delete details not in request
         List<Long> toDelete = existingDetRowIds.stream()
                 .filter(id -> !requestDetRowIds.contains(id))
-                .collect(Collectors.toList());
+                .toList();
         for (Long detRowId : toDelete) {
             impPayDtlRepository.deleteById(new ShipLineTariffImpPayDtlId(transactionPoid, detRowId));
         }
@@ -413,17 +456,15 @@ public class LineTariffsServiceImpl implements LineTariffsService {
         // Update or create details
         Long maxDetRowId = impPayDtlRepository.getMaxDetRowId(transactionPoid);
         for (TariffDetailUpdateDTO detailDto : detailDtos) {
+            validateContainerTypeExists(detailDto.getContainerTypePoid());
             if (detailDto.getDetRowId() != null) {
-                // Update existing
                 ShipLineTariffImpPayDtl existing = impPayDtlRepository.findByTransactionPoidAndDetRowId(transactionPoid, detailDto.getDetRowId())
-                        .orElseThrow(() -> new ResourceNotFoundException("Tariff Detail", "detRowId", detailDto.getDetRowId().toString()));
-
-                mapper.updateImpPayDtlFromDTO(detailDto, existing, currentUser);
+                        .orElseThrow(() -> new ResourceNotFoundException(TARIFF_DETAIL, DET_ROW_ID, detailDto.getDetRowId().toString()));
+                mapper.updateImpPayDtlFromDTO(detailDto, existing);
                 impPayDtlRepository.save(existing);
             } else {
-                // Create new
                 maxDetRowId++;
-                ShipLineTariffImpPayDtl newDetail = mapper.mapImpPayDtlUpdateDTOToEntity(detailDto, transactionPoid, maxDetRowId, currentUser);
+                ShipLineTariffImpPayDtl newDetail = mapper.mapImpPayDtlUpdateDTOToEntity(detailDto, transactionPoid, maxDetRowId);
                 impPayDtlRepository.save(newDetail);
             }
         }
@@ -432,7 +473,7 @@ public class LineTariffsServiceImpl implements LineTariffsService {
     /**
      * Update Export Detention Collectable detail records
      */
-    private void updateDetailRecordsExpDtl(Long transactionPoid, List<TariffDetailUpdateDTO> detailDtos, String currentUser) {
+    private void updateDetailRecordsExpDtl(Long transactionPoid, List<TariffDetailUpdateDTO> detailDtos) {
         if (detailDtos == null) {
             detailDtos = java.util.Collections.emptyList();
         }
@@ -450,7 +491,7 @@ public class LineTariffsServiceImpl implements LineTariffsService {
         // Delete details not in request
         List<Long> toDelete = existingDetRowIds.stream()
                 .filter(id -> !requestDetRowIds.contains(id))
-                .collect(Collectors.toList());
+                .toList();
         for (Long detRowId : toDelete) {
             expDtlRepository.deleteById(new ShipLineTariffExpDtlId(transactionPoid, detRowId));
         }
@@ -458,17 +499,15 @@ public class LineTariffsServiceImpl implements LineTariffsService {
         // Update or create details
         Long maxDetRowId = expDtlRepository.getMaxDetRowId(transactionPoid);
         for (TariffDetailUpdateDTO detailDto : detailDtos) {
+            validateContainerTypeExists(detailDto.getContainerTypePoid());
             if (detailDto.getDetRowId() != null) {
-                // Update existing
                 ShipLineTariffExpDtl existing = expDtlRepository.findByTransactionPoidAndDetRowId(transactionPoid, detailDto.getDetRowId())
-                        .orElseThrow(() -> new ResourceNotFoundException("Tariff Detail", "detRowId", detailDto.getDetRowId().toString()));
-
-                mapper.updateExpDtlFromDTO(detailDto, existing, currentUser);
+                        .orElseThrow(() -> new ResourceNotFoundException(TARIFF_DETAIL, DET_ROW_ID, detailDto.getDetRowId().toString()));
+                mapper.updateExpDtlFromDTO(detailDto, existing);
                 expDtlRepository.save(existing);
             } else {
-                // Create new
                 maxDetRowId++;
-                ShipLineTariffExpDtl newDetail = mapper.mapExpDtlUpdateDTOToEntity(detailDto, transactionPoid, maxDetRowId, currentUser);
+                ShipLineTariffExpDtl newDetail = mapper.mapExpDtlUpdateDTOToEntity(detailDto, transactionPoid, maxDetRowId);
                 expDtlRepository.save(newDetail);
             }
         }
@@ -477,7 +516,7 @@ public class LineTariffsServiceImpl implements LineTariffsService {
     /**
      * Update Export Detention Payable detail records
      */
-    private void updateDetailRecordsExpPayDtl(Long transactionPoid, List<TariffDetailUpdateDTO> detailDtos, String currentUser) {
+    private void updateDetailRecordsExpPayDtl(Long transactionPoid, List<TariffDetailUpdateDTO> detailDtos) {
         if (detailDtos == null) {
             detailDtos = java.util.Collections.emptyList();
         }
@@ -495,7 +534,7 @@ public class LineTariffsServiceImpl implements LineTariffsService {
         // Delete details not in request
         List<Long> toDelete = existingDetRowIds.stream()
                 .filter(id -> !requestDetRowIds.contains(id))
-                .collect(Collectors.toList());
+                .toList();
         for (Long detRowId : toDelete) {
             expPayDtlRepository.deleteById(new ShipLineTariffExpPayDtlId(transactionPoid, detRowId));
         }
@@ -503,17 +542,15 @@ public class LineTariffsServiceImpl implements LineTariffsService {
         // Update or create details
         Long maxDetRowId = expPayDtlRepository.getMaxDetRowId(transactionPoid);
         for (TariffDetailUpdateDTO detailDto : detailDtos) {
+            validateContainerTypeExists(detailDto.getContainerTypePoid());
             if (detailDto.getDetRowId() != null) {
-                // Update existing
                 ShipLineTariffExpPayDtl existing = expPayDtlRepository.findByTransactionPoidAndDetRowId(transactionPoid, detailDto.getDetRowId())
-                        .orElseThrow(() -> new ResourceNotFoundException("Tariff Detail", "detRowId", detailDto.getDetRowId().toString()));
-
-                mapper.updateExpPayDtlFromDTO(detailDto, existing, currentUser);
+                        .orElseThrow(() -> new ResourceNotFoundException(TARIFF_DETAIL, DET_ROW_ID, detailDto.getDetRowId().toString()));
+                mapper.updateExpPayDtlFromDTO(detailDto, existing);
                 expPayDtlRepository.save(existing);
             } else {
-                // Create new
                 maxDetRowId++;
-                ShipLineTariffExpPayDtl newDetail = mapper.mapExpPayDtlUpdateDTOToEntity(detailDto, transactionPoid, maxDetRowId, currentUser);
+                ShipLineTariffExpPayDtl newDetail = mapper.mapExpPayDtlUpdateDTOToEntity(detailDto, transactionPoid, maxDetRowId);
                 expPayDtlRepository.save(newDetail);
             }
         }
@@ -523,12 +560,16 @@ public class LineTariffsServiceImpl implements LineTariffsService {
      * Copy detail records from source transaction to target transaction
      */
     private void copyDetailRecords(Long sourceTransactionPoid, Long targetTransactionPoid) {
-        String currentUser = getCurrentUser();
+        copyImpDtlRecords(sourceTransactionPoid, targetTransactionPoid);
+        copyImpPayDtlRecords(sourceTransactionPoid, targetTransactionPoid);
+        copyExpDtlRecords(sourceTransactionPoid, targetTransactionPoid);
+        copyExpPayDtlRecords(sourceTransactionPoid, targetTransactionPoid);
+    }
 
-        // Copy Import Demurrage Collectable
-        List<ShipLineTariffImpDtl> sourceImpDtlList = impDtlRepository.findByTransactionPoidOrderByDetRowId(sourceTransactionPoid);
+    private void copyImpDtlRecords(Long sourceTransactionPoid, Long targetTransactionPoid) {
+        List<ShipLineTariffImpDtl> sourceList = impDtlRepository.findByTransactionPoidOrderByDetRowId(sourceTransactionPoid);
         Long maxDetRowId = 0L;
-        for (ShipLineTariffImpDtl source : sourceImpDtlList) {
+        for (ShipLineTariffImpDtl source : sourceList) {
             maxDetRowId++;
             ShipLineTariffImpDtl target = new ShipLineTariffImpDtl();
             target.setTransactionPoid(targetTransactionPoid);
@@ -549,15 +590,14 @@ public class LineTariffsServiceImpl implements LineTariffsService {
             target.setSlab6Rate(source.getSlab6Rate());
             target.setSlab7Tilldays(source.getSlab7Tilldays());
             target.setSlab7Rate(source.getSlab7Rate());
-            target.setCreatedBy(currentUser);
-            target.setCreatedDate(LocalDateTime.now());
             impDtlRepository.save(target);
         }
+    }
 
-        // Copy Import Demurrage Payable
-        List<ShipLineTariffImpPayDtl> sourceImpPayDtlList = impPayDtlRepository.findByTransactionPoidOrderByDetRowId(sourceTransactionPoid);
-        maxDetRowId = 0L;
-        for (ShipLineTariffImpPayDtl source : sourceImpPayDtlList) {
+    private void copyImpPayDtlRecords(Long sourceTransactionPoid, Long targetTransactionPoid) {
+        List<ShipLineTariffImpPayDtl> sourceList = impPayDtlRepository.findByTransactionPoidOrderByDetRowId(sourceTransactionPoid);
+        Long maxDetRowId = 0L;
+        for (ShipLineTariffImpPayDtl source : sourceList) {
             maxDetRowId++;
             ShipLineTariffImpPayDtl target = ShipLineTariffImpPayDtl.builder()
                     .transactionPoid(targetTransactionPoid)
@@ -578,16 +618,15 @@ public class LineTariffsServiceImpl implements LineTariffsService {
                     .slab6Rate(source.getSlab6Rate())
                     .slab7Tilldays(source.getSlab7Tilldays())
                     .slab7Rate(source.getSlab7Rate())
-                    .createdBy(currentUser)
-                    .createdDate(LocalDateTime.now())
                     .build();
             impPayDtlRepository.save(target);
         }
+    }
 
-        // Copy Export Detention Collectable
-        List<ShipLineTariffExpDtl> sourceExpDtlList = expDtlRepository.findByTransactionPoidOrderByDetRowId(sourceTransactionPoid);
-        maxDetRowId = 0L;
-        for (ShipLineTariffExpDtl source : sourceExpDtlList) {
+    private void copyExpDtlRecords(Long sourceTransactionPoid, Long targetTransactionPoid) {
+        List<ShipLineTariffExpDtl> sourceList = expDtlRepository.findByTransactionPoidOrderByDetRowId(sourceTransactionPoid);
+        Long maxDetRowId = 0L;
+        for (ShipLineTariffExpDtl source : sourceList) {
             maxDetRowId++;
             ShipLineTariffExpDtl target = new ShipLineTariffExpDtl();
             target.setTransactionPoid(targetTransactionPoid);
@@ -608,15 +647,14 @@ public class LineTariffsServiceImpl implements LineTariffsService {
             target.setSlab6Rate(source.getSlab6Rate());
             target.setSlab7Tilldays(source.getSlab7Tilldays());
             target.setSlab7Rate(source.getSlab7Rate());
-            target.setCreatedBy(currentUser);
-            target.setCreatedDate(LocalDateTime.now());
             expDtlRepository.save(target);
         }
+    }
 
-        // Copy Export Detention Payable
-        List<ShipLineTariffExpPayDtl> sourceExpPayDtlList = expPayDtlRepository.findByTransactionPoidOrderByDetRowId(sourceTransactionPoid);
-        maxDetRowId = 0L;
-        for (ShipLineTariffExpPayDtl source : sourceExpPayDtlList) {
+    private void copyExpPayDtlRecords(Long sourceTransactionPoid, Long targetTransactionPoid) {
+        List<ShipLineTariffExpPayDtl> sourceList = expPayDtlRepository.findByTransactionPoidOrderByDetRowId(sourceTransactionPoid);
+        Long maxDetRowId = 0L;
+        for (ShipLineTariffExpPayDtl source : sourceList) {
             maxDetRowId++;
             ShipLineTariffExpPayDtl target = new ShipLineTariffExpPayDtl();
             target.setTransactionPoid(targetTransactionPoid);
@@ -637,116 +675,7 @@ public class LineTariffsServiceImpl implements LineTariffsService {
             target.setSlab6Rate(source.getSlab6Rate());
             target.setSlab7Tilldays(source.getSlab7Tilldays());
             target.setSlab7Rate(source.getSlab7Rate());
-            target.setCreatedBy(currentUser);
-            target.setCreatedDate(LocalDateTime.now());
             expPayDtlRepository.save(target);
-        }
-    }
-
-    /**
-     * Enrich DTO with LOV data
-     */
-    private void enrichLovData(LineTariffDto dto) {
-        Long groupPoid = com.asg.common.lib.security.util.UserContext.getGroupPoid();
-        Long companyPoid = com.asg.common.lib.security.util.UserContext.getCompanyPoid();
-        Long userPoid = com.asg.common.lib.security.util.UserContext.getUserPoid();
-
-        // Line LOV
-        if (dto.getLinePoid() != null) {
-            try {
-                LovGetListDto lineDet =
-                        lovService.getDetailsByPoidAndLovName(
-                                dto.getLinePoid(),
-                                "LINE_MASTER"
-                        );
-                dto.setLineDet(lineDet);
-            } catch (Exception e) {
-                log.warn("Failed to fetch LINE_MASTER LOV for linePoid: {}", dto.getLinePoid(), e);
-            }
-        }
-
-
-        // Payable Currency LOV (code-based)
-        if (dto.getPayableCurrency() != null && !dto.getPayableCurrency().isEmpty()) {
-            try {
-                LovGetListDto payableCurrencyDet = lovService.getDetailsByCodeAndLovName(dto.getPayableCurrency(), "CURRENCY");
-                dto.setPayableCurrencyDet(payableCurrencyDet);
-
-            } catch (Exception e) {
-                log.warn("Failed to fetch CURRENCY LOV for payableCurrency: {}", dto.getPayableCurrency(), e);
-            }
-        }
-
-        // Receivable Currency LOV (code-based)
-        if (dto.getReceivableCurrency() != null && !dto.getReceivableCurrency().isEmpty()) {
-            try {
-                LovGetListDto receivableCurrencyDet =
-                        lovService.getDetailsByCodeAndLovName(
-                                dto.getReceivableCurrency(),
-                                "CURRENCY"
-                        );
-                dto.setReceivableCurrencyDet(receivableCurrencyDet);
-
-            } catch (Exception e) {
-                log.warn("Failed to fetch CURRENCY LOV for receivableCurrency: {}", dto.getReceivableCurrency(), e);
-            }
-        }
-
-
-        // Enrich detail LOVs
-      /*  enrichDetailLovs(dto.getImportDemurrageCollectable(), groupPoid, companyPoid, userPoid);
-        enrichDetailLovs(dto.getImportDemurragePayable(), groupPoid, companyPoid, userPoid);
-        enrichDetailLovs(dto.getExportDetentionCollectable(), groupPoid, companyPoid, userPoid);
-        enrichDetailLovs(dto.getExportDetentionPayable(), groupPoid, companyPoid, userPoid);*/
-        enrichDetailLovs(dto.getImportDemurrageCollectable());
-        enrichDetailLovs(dto.getImportDemurragePayable());
-        enrichDetailLovs(dto.getExportDetentionCollectable());
-        enrichDetailLovs(dto.getExportDetentionPayable());
-
-    }
-
-    /**
-     * Enrich detail DTOs with container type LOV data
-     */
-  /*  private void enrichDetailLovs(List<TariffDetailDto> detailDtos, Long groupPoid, Long companyPoid, Long userPoid) {
-        if (detailDtos == null) {
-            return;
-        }
-
-        for (TariffDetailDto detailDto : detailDtos) {
-            if (detailDto.getContainerTypePoid() != null) {
-                try {
-                    LovGetListDto containerTypeDet =
-                            lovService.getDetailsByPoidAndLovName(
-                                    detailDto.getContainerTypePoid(),
-                                    "LINEWISE_CONTAINER_TYPE"
-                            );
-                    detailDto.setContainerTypeDet(containerTypeDet);
-                } catch (Exception e) {
-                    log.warn("Failed to fetch LINEWISE_CONTAINER_TYPE LOV for containerTypePoid: {}", detailDto.getContainerTypePoid(), e);
-                }
-            }
-        }
-    }*/
-    private void enrichDetailLovs(List<TariffDetailDto> detailDtos) {
-        if (detailDtos == null) {
-            return;
-        }
-
-        for (TariffDetailDto detailDto : detailDtos) {
-            if (detailDto.getContainerTypePoid() != null) {
-                try {
-                    LovGetListDto containerTypeDet =
-                            lovService.getDetailsByPoidAndLovName(
-                                    detailDto.getContainerTypePoid(),
-                                    "LINEWISE_CONTAINER_TYPE"
-                            );
-                    detailDto.setContainerTypeDet(containerTypeDet);
-                } catch (Exception e) {
-                    log.warn("Failed to fetch LINEWISE_CONTAINER_TYPE LOV for containerTypePoid: {}",
-                            detailDto.getContainerTypePoid(), e);
-                }
-            }
         }
     }
 
@@ -754,14 +683,55 @@ public class LineTariffsServiceImpl implements LineTariffsService {
      * Validate TariffCreateDTO
      */
     private void validateTariffCreateDTO(LineTariffCreateDTO dto, Long groupPoid) {
-        // Date validation: periodFrom must be <= periodTo
-        if (dto.getPeriodFrom() != null && dto.getPeriodTo() != null) {
-            if (dto.getPeriodFrom().isAfter(dto.getPeriodTo())) {
-                throw new ValidationException("Period from date must be less than or equal to period to date");
-            }
+        validatePeriodRange(dto.getPeriodFrom(), dto.getPeriodTo());
+        validateOverlapForCreate(dto, groupPoid);
+        validateDocRefUniqueness(dto.getDocRef());
+        validateMutuallyExclusiveFlags(
+                dto.getDmgFromSameday(),
+                dto.getDmgFromNextday(),
+                dto.getDtnFromSameday(),
+                dto.getDtnFromNextday()
+        );
+    }
+
+    /**
+     * Validate TariffUpdateDTO
+     */
+    private void validateTariffUpdateDTO(LineTariffUpdateDTO dto, Long excludeTransactionPoid, Long groupPoid) {
+        validatePeriodRange(dto.getPeriodFrom(), dto.getPeriodTo());
+
+        // Get existing tariff to check linePoid if not provided in update
+        ShipLineTariffHdr existing = tariffHdrRepository.findById(excludeTransactionPoid)
+                .orElseThrow(() -> new ResourceNotFoundException(LINE_TARIFF, TRANSACTION_POID, excludeTransactionPoid.toString()));
+
+        Long linePoid = dto.getLinePoid() != null ? dto.getLinePoid() : existing.getLinePoid();
+        LocalDate periodFrom = dto.getPeriodFrom() != null ? dto.getPeriodFrom() : existing.getPeriodFrom();
+        LocalDate periodTo = dto.getPeriodTo() != null ? dto.getPeriodTo() : existing.getPeriodTo();
+
+        validateOverlapForUpdate(linePoid, periodFrom, periodTo, groupPoid, excludeTransactionPoid);
+
+        // Check if document reference already exists (excluding current transaction)
+        if (dto.getDocRef() != null
+                && !dto.getDocRef().isEmpty()
+                && tariffHdrRepository.existsByDocRefExcludingPoid(dto.getDocRef(), excludeTransactionPoid)) {
+            throw new ValidationException("Document reference already exists");
         }
 
-        // Check for date overlap
+        // Validate mutually exclusive flags
+        String dmgFromSameday = dto.getDmgFromSameday() != null ? dto.getDmgFromSameday() : existing.getDmgFromSameday();
+        String dmgFromNextday = dto.getDmgFromNextday() != null ? dto.getDmgFromNextday() : existing.getDmgFromNextday();
+        String dtnFromSameday = dto.getDtnFromSameday() != null ? dto.getDtnFromSameday() : existing.getDtnFromSameday();
+        String dtnFromNextday = dto.getDtnFromNextday() != null ? dto.getDtnFromNextday() : existing.getDtnFromNextday();
+        validateMutuallyExclusiveFlags(dmgFromSameday, dmgFromNextday, dtnFromSameday, dtnFromNextday);
+    }
+
+    private void validatePeriodRange(LocalDate periodFrom, LocalDate periodTo) {
+        if (periodFrom != null && periodTo != null && periodFrom.isAfter(periodTo)) {
+            throw new ValidationException("Period from date must be less than or equal to period to date");
+        }
+    }
+
+    private void validateOverlapForCreate(LineTariffCreateDTO dto, Long groupPoid) {
         if (dto.getLinePoid() != null && dto.getPeriodFrom() != null && dto.getPeriodTo() != null) {
             Long companyPoid = com.asg.common.lib.security.util.UserContext.getCompanyPoid();
             if (tariffHdrRepository.existsOverlappingPeriod(
@@ -774,44 +744,15 @@ public class LineTariffsServiceImpl implements LineTariffsService {
                 throw new ValidationException("Period overlaps with an existing tariff for the same line");
             }
         }
-
-        // Check if document reference already exists
-        if (dto.getDocRef() != null && !dto.getDocRef().isEmpty()) {
-            if (tariffHdrRepository.existsByDocRef(dto.getDocRef())) {
-                throw new ValidationException("Document reference already exists");
-            }
-        }
-
-        // Validate mutually exclusive flags
-        if ("Y".equals(dto.getDmgFromSameday()) && "Y".equals(dto.getDmgFromNextday())) {
-            throw new ValidationException("Same day and Next day both cannot be selected for Demurrage");
-        }
-
-        if ("Y".equals(dto.getDtnFromSameday()) && "Y".equals(dto.getDtnFromNextday())) {
-            throw new ValidationException("Same day and Next day both cannot be selected for Detention");
-        }
     }
 
-    /**
-     * Validate TariffUpdateDTO
-     */
-    private void validateTariffUpdateDTO(LineTariffUpdateDTO dto, Long excludeTransactionPoid, Long groupPoid) {
-        // Date validation: periodFrom must be <= periodTo
-        if (dto.getPeriodFrom() != null && dto.getPeriodTo() != null) {
-            if (dto.getPeriodFrom().isAfter(dto.getPeriodTo())) {
-                throw new ValidationException("Period from date must be less than or equal to period to date");
-            }
-        }
-
-        // Get existing tariff to check linePoid if not provided in update
-        ShipLineTariffHdr existing = tariffHdrRepository.findById(excludeTransactionPoid)
-                .orElseThrow(() -> new ResourceNotFoundException("Line Tariff", "transactionPoid", excludeTransactionPoid.toString()));
-
-        Long linePoid = dto.getLinePoid() != null ? dto.getLinePoid() : existing.getLinePoid();
-        LocalDate periodFrom = dto.getPeriodFrom() != null ? dto.getPeriodFrom() : existing.getPeriodFrom();
-        LocalDate periodTo = dto.getPeriodTo() != null ? dto.getPeriodTo() : existing.getPeriodTo();
-
-        // Check for date overlap (excluding current transaction)
+    private void validateOverlapForUpdate(
+            Long linePoid,
+            LocalDate periodFrom,
+            LocalDate periodTo,
+            Long groupPoid,
+            Long excludeTransactionPoid
+    ) {
         if (linePoid != null && periodFrom != null && periodTo != null) {
             Long companyPoid = com.asg.common.lib.security.util.UserContext.getCompanyPoid();
             if (tariffHdrRepository.existsOverlappingPeriod(
@@ -824,26 +765,107 @@ public class LineTariffsServiceImpl implements LineTariffsService {
                 throw new ValidationException("Period overlaps with an existing tariff for the same line");
             }
         }
+    }
 
-        // Check if document reference already exists (excluding current transaction)
-        if (dto.getDocRef() != null && !dto.getDocRef().isEmpty()) {
-            if (tariffHdrRepository.existsByDocRefExcludingPoid(dto.getDocRef(), excludeTransactionPoid)) {
-                throw new ValidationException("Document reference already exists");
+    private void validateDocRefUniqueness(String docRef) {
+        if (docRef != null && !docRef.trim().isEmpty()) {
+            String trimmedDocRef = docRef.trim();
+            if (tariffHdrRepository.existsByDocRef(trimmedDocRef)) {
+                throw new ValidationException("Document Reference " + trimmedDocRef + " already exists. Please use a different reference.");
             }
         }
+    }
 
-        // Validate mutually exclusive flags
-        String dmgFromSameday = dto.getDmgFromSameday() != null ? dto.getDmgFromSameday() : existing.getDmgFromSameday();
-        String dmgFromNextday = dto.getDmgFromNextday() != null ? dto.getDmgFromNextday() : existing.getDmgFromNextday();
+    private Map<Long, ShipContainerTypeMaster> buildContainerTypeMap(
+            List<ShipLineTariffImpDtl> impDtlList,
+            List<ShipLineTariffImpPayDtl> impPayDtlList,
+            List<ShipLineTariffExpDtl> expDtlList,
+            List<ShipLineTariffExpPayDtl> expPayDtlList) {
+
+        Set<Long> poids = Stream.of(
+                impDtlList.stream().map(ShipLineTariffImpDtl::getContainerTypePoid),
+                impPayDtlList.stream().map(ShipLineTariffImpPayDtl::getContainerTypePoid),
+                expDtlList.stream().map(ShipLineTariffExpDtl::getContainerTypePoid),
+                expPayDtlList.stream().map(ShipLineTariffExpPayDtl::getContainerTypePoid)
+        ).flatMap(s -> s).filter(java.util.Objects::nonNull).collect(Collectors.toSet());
+
+        if (poids.isEmpty()) return Map.of();
+
+        return containerTypeRepository.findAllById(poids).stream()
+                .collect(Collectors.toMap(ShipContainerTypeMaster::getContainerTypePoid, ct -> ct));
+    }
+
+    private void validateContainerTypeExists(Long containerTypePoid) {
+        if (containerTypePoid == null || containerTypePoid <= 0) {
+            throw new ValidationException("Container type is required");
+        }
+        if (!containerTypeRepository.existsById(containerTypePoid)) {
+            throw new ValidationException("Invalid container type: " + containerTypePoid);
+        }
+    }
+
+    private void validateMutuallyExclusiveFlags(
+            String dmgFromSameday,
+            String dmgFromNextday,
+            String dtnFromSameday,
+            String dtnFromNextday
+    ) {
         if ("Y".equals(dmgFromSameday) && "Y".equals(dmgFromNextday)) {
             throw new ValidationException("Same day and Next day both cannot be selected for Demurrage");
         }
-
-        String dtnFromSameday = dto.getDtnFromSameday() != null ? dto.getDtnFromSameday() : existing.getDtnFromSameday();
-        String dtnFromNextday = dto.getDtnFromNextday() != null ? dto.getDtnFromNextday() : existing.getDtnFromNextday();
         if ("Y".equals(dtnFromSameday) && "Y".equals(dtnFromNextday)) {
             throw new ValidationException("Same day and Next day both cannot be selected for Detention");
         }
+    }
+
+    @Override
+    @Transactional
+    public void copySlabsToPayable(Long id, String type) {
+        log.info("Copying slabs to payable for transactionPoid: {}, type: {}", id, type);
+        if ("DMG".equalsIgnoreCase(type)) {
+            List<ShipLineTariffImpDtl> collectables = impDtlRepository.findByTransactionPoidOrderByDetRowId(id);
+            List<ShipLineTariffImpPayDtl> payables = impPayDtlRepository.findByTransactionPoidOrderByDetRowId(id);
+            Map<Long, ShipLineTariffImpPayDtl> payableByContainerType = payables.stream()
+                    .filter(p -> p.getContainerTypePoid() != null)
+                    .collect(Collectors.toMap(ShipLineTariffImpPayDtl::getContainerTypePoid, p -> p, (a, b) -> a));
+            for (ShipLineTariffImpDtl col : collectables) {
+                if (col.getContainerTypePoid() == null) continue;
+                ShipLineTariffImpPayDtl pay = payableByContainerType.get(col.getContainerTypePoid());
+                if (pay == null) continue;
+                pay.setFreeDays(col.getFreeDays());
+                pay.setSlab1Tilldays(col.getSlab1Tilldays()); pay.setSlab1Rate(col.getSlab1Rate());
+                pay.setSlab2Tilldays(col.getSlab2Tilldays()); pay.setSlab2Rate(col.getSlab2Rate());
+                pay.setSlab3Tilldays(col.getSlab3Tilldays()); pay.setSlab3Rate(col.getSlab3Rate());
+                pay.setSlab4Tilldays(col.getSlab4Tilldays()); pay.setSlab4Rate(col.getSlab4Rate());
+                pay.setSlab5Tilldays(col.getSlab5Tilldays()); pay.setSlab5Rate(col.getSlab5Rate());
+                pay.setSlab6Tilldays(col.getSlab6Tilldays()); pay.setSlab6Rate(col.getSlab6Rate());
+                pay.setSlab7Tilldays(col.getSlab7Tilldays()); pay.setSlab7Rate(col.getSlab7Rate());
+                impPayDtlRepository.save(pay);
+            }
+        } else if ("DTN".equalsIgnoreCase(type)) {
+            List<ShipLineTariffExpDtl> collectables = expDtlRepository.findByTransactionPoidOrderByDetRowId(id);
+            List<ShipLineTariffExpPayDtl> payables = expPayDtlRepository.findByTransactionPoidOrderByDetRowId(id);
+            Map<Long, ShipLineTariffExpPayDtl> payableByContainerType = payables.stream()
+                    .filter(p -> p.getContainerTypePoid() != null)
+                    .collect(Collectors.toMap(ShipLineTariffExpPayDtl::getContainerTypePoid, p -> p, (a, b) -> a));
+            for (ShipLineTariffExpDtl col : collectables) {
+                if (col.getContainerTypePoid() == null) continue;
+                ShipLineTariffExpPayDtl pay = payableByContainerType.get(col.getContainerTypePoid());
+                if (pay == null) continue;
+                pay.setFreeDays(col.getFreeDays());
+                pay.setSlab1Tilldays(col.getSlab1Tilldays()); pay.setSlab1Rate(col.getSlab1Rate());
+                pay.setSlab2Tilldays(col.getSlab2Tilldays()); pay.setSlab2Rate(col.getSlab2Rate());
+                pay.setSlab3Tilldays(col.getSlab3Tilldays()); pay.setSlab3Rate(col.getSlab3Rate());
+                pay.setSlab4Tilldays(col.getSlab4Tilldays()); pay.setSlab4Rate(col.getSlab4Rate());
+                pay.setSlab5Tilldays(col.getSlab5Tilldays()); pay.setSlab5Rate(col.getSlab5Rate());
+                pay.setSlab6Tilldays(col.getSlab6Tilldays()); pay.setSlab6Rate(col.getSlab6Rate());
+                pay.setSlab7Tilldays(col.getSlab7Tilldays()); pay.setSlab7Rate(col.getSlab7Rate());
+                expPayDtlRepository.save(pay);
+            }
+        } else {
+            throw new ValidationException("Invalid type. Must be DMG or DTN");
+        }
+        log.info("Successfully copied slabs to payable for transactionPoid: {}, type: {}", id, type);
     }
 }
 
